# hdrdemo2

./: .gitignore  CMakeLists.txt  Mask相关处理说明.md  readme.md  v.txt  测试报告文字.txt  高动态视觉测量系统软件说明文档.docx
app/: CMakeLists.txt
app/res/: app.qrc  dark.json  darkblue.json
app/res/themes/: light.json
app/src/: BezierCurveEditor.cpp  BezierCurveEditor.hpp  CameraControllerBar.cpp  CameraControllerBar.h  CameraViewPanel.cpp  CameraViewPanel.h  Common.h  DummyTestCamera.cpp  DummyTestCamera.h  Frame.cpp  Frame.h  GLSLEditor.cpp  GLSLEditor.hpp  Global.hpp  GrayMappingWidget.cpp  GrayMappingWidget.h  ICamera.hpp  ImageRenderer.cpp  ImageRenderer.hpp  MaskWindow.hpp  MonacoEditorWindow.cpp  MonacoEditorWindow.hpp  MultiWindowManager.cpp  MultiWindowManager.h  NeonButton.cpp  NeonButton.h  PlayerOne.cpp  PlayerOne.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  ThreadSafeImage.hpp  TripleBuffer.h  USBCamera.cpp  USBCamera.hpp  UserControlArea.hpp  Utils.hpp  devicefinderdialog.cpp  devicefinderdialog.hpp  (+9 more)
python/: gray.py
